--- a/site/_themes/hyde/layouts/sidebar.njk
+++ b/site/_themes/hyde/layouts/sidebar.njk
@@ -10,10 +10,7 @@
         {% for item in collections.pages %}
         <a class="sidebar-nav-item{% if page.url == item.url %} active{% endif %}" href="{{ item.url }}">{{ item.data.title }}</a>
         {% endfor %}
-        <a class="sidebar-nav-item" href="{{ pkg.homepage }}" rel="noopener" target="_blank">GitHub project</a>
-        <span class="sidebar-nav-item">Currently v{{ pkg.version }}</span>
+        <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="/archive/">Archive</a>
       </nav>
-
-      <p>&copy; {{ site.time | dateFormat('YYYY') }} All rights reserved.</p>
     </div>
   </div>
