--- a/site/index.njk
+++ b/site/index.njk
@@ -1,13 +1,29 @@
+---
+pagination:
+  data: collections.posts
+  size: 6
+  reverse: true
+  alias: posts
+---
+
 {% extends "default.njk" %}
 
 {% block content %}
     <div class="posts">
-{% for post in collections.posts | reverse | limit(3) %}
+{% for post in posts %}
       <article class="post" data-input-path="{{ post.filePathStem }}">
         <h1 class="post-title"><a href="{{ post.url }}">{{ post.data.title }}</a></h1>
         <time class="post-date" datetime="{{ post.date | dateISO }}">{{ post.date | dateFormat('LL') }}</time>
-{{ post.templateContent | safe | trim }}
+{{ post.content | safe | trim }}
       </article>
 {% endfor %}
     </div>
+<nav aria-labelledby="my-pagination" class="compact-pagination">
+  <h3 id="my-pagination">Page</h2>
+  <ol>
+{%- for pageEntry in pagination.pages %}
+    <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
+{%- endfor %}
+  </ol>
+</nav>
 {% endblock %}
