--- a/site/_themes/hyde/layouts/head.njk
+++ b/site/_themes/hyde/layouts/head.njk
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="generator" content="{{ eleventy.generator }}" built="{{ build.time | dateISO }}">
 
-  <link rel="shortcut icon" href="/images/favicon-32x32.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+  <!-- <link rel="shortcut icon" href="/images/favicon-32x32.png" sizes="32x32"> -->
+  <!-- <link rel="apple-touch-icon" href="/images/apple-touch-icon.png"> -->
+
+  <link rel="shortcut icon" href="/images/spanner-small.png" sizes="32x32">
+  <link rel="apple-touch-icon" href="/images/spanner-small.png">
+
+  <script src="/jquery-3.7.1.min.js" integrity="" crossorigin="anonymous"></script>
 
   {% if isProduction %}<style>{% include "../css/styles.min.css" %}</style>{% else %}<link rel="stylesheet" href="/css/styles.min.css">{% endif %}
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feeds.xml">
