--- a/site/_themes/hyde/css/poole.css
+++ b/site/_themes/hyde/css/poole.css
@@ -108,6 +108,10 @@ h4, h5, h6 {
   font-size: 1rem;
 }
 
+.theme-base-0b h1.post-title a {
+	color: #F5F5F5;
+}
+
 /* Body text */
 p {
   margin-top: 0;
