Rework CSS build and include process
Wasn't coming through to the production bundle.

--- a/site/_themes/hyde/css/_styles.scss
+++ b/site/_themes/hyde/css/_styles.scss
@@ -1,5 +1,7 @@
-@import "./poole.css";
-@import "./hyde.css";
+/* @import "./_poole.scss"; */
+/* @import "./_hyde.scss"; */
+@use "./poole";
+@use "./hyde";
 
 @import "highlight.js/styles/github-dark.css";
 
