--- a/site/_themes/hyde/layouts/head.njk
+++ b/site/_themes/hyde/layouts/head.njk
@@ -13,6 +13,7 @@
 
   <script src="/jquery-3.7.1.min.js" integrity="" crossorigin="anonymous"></script>
 
-  {% if isProduction %}<style>{% include "../css/styles.min.css" %}</style>{% else %}<link rel="stylesheet" href="/css/styles.min.css">{% endif %}
+  <link rel="stylesheet" href="/style.css">
+
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feeds.xml">
 </head>
