--- a/site/_themes/hyde/css/_styles.scss
+++ b/site/_themes/hyde/css/_styles.scss
@@ -51,3 +51,28 @@ a:focus, a:hover {
 
 .content {
 }
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-img {
+  align-content: center;
+  flex-grow: 1;
+  max-width: 100%;
+  width: 100%;
+  padding: 0;
+}
+
+img#flickr_roll {
+  width: 100%;
+  height: 33vh; // mobile, 100% for desktop
+  margin: auto;
+}
+
+@media (min-width: 48em) { // desktop
+  img#flickr_roll {
+    height: 100%;
+  }
+}
