--- a/site/_themes/hyde/layouts/sidebar.njk
+++ b/site/_themes/hyde/layouts/sidebar.njk
@@ -1,4 +1,20 @@
+  <script type="text/javascript" src="/js/get_random_image_from_flickr.js"></script>
+  <script>
+  	async function load_img(target) {
+		const api_key = '796e426a98e426b387078fccd022ad3b';
+        const album_id = '72177720323695910';
+        const user_id = '202205040@N05';
+
+		console.log("WIDTH", target.width, target.height);
+
+        await draw_random_image_from_flickr(target, api_key, user_id, album_id, target.width, target.height);
+	}
+  </script>
   <div role="region" class="sidebar">
+	<div class="container sidebar-img">
+	  <img id="flickr_roll" src="" alt="Loading..." loading=lazy onerror="load_img(this)"/>
+	</div>
+
     <div class="container sidebar-sticky">
       <div class="sidebar-about">
         <h1><a href="/">{{ site.title }}</a></h1>
