Switch to browser controlled dynamic images for the flickr image
A little simpler, needs a second API query, handles corner cases like
resizing and device pixel ratios much better.

--- a/site/_themes/hyde/layouts/sidebar.njk
+++ b/site/_themes/hyde/layouts/sidebar.njk
@@ -5,9 +5,7 @@
         const album_id = '72177720323695910';
         const user_id = '202205040@N05';
 
-		console.log("WIDTH", target.width, target.height);
-
-        await draw_random_image_from_flickr(target, api_key, user_id, album_id, target.width, target.height);
+        await draw_random_image_from_flickr(target, api_key, user_id, album_id);
 	}
   </script>
   <div role="region" class="sidebar">
