--- a/site/_themes/hyde/css/_styles.scss
+++ b/site/_themes/hyde/css/_styles.scss
@@ -66,13 +66,13 @@ a:focus, a:hover {
 }
 
 img#flickr_roll {
-  width: 100%;
+  width: 100%; // javascript may shrink it to match image
   height: 33vh; // mobile, 100% for desktop
   margin: auto;
 }
 
 @media (min-width: 48em) { // desktop
   img#flickr_roll {
-    height: 100%;
+    height: 100%;  // javascript may shrink it down
   }
 }
