--- a/site/_themes/hyde/layouts/sidebar.njk
+++ b/site/_themes/hyde/layouts/sidebar.njk
@@ -10,7 +10,10 @@
   </script>
   <div role="region" class="sidebar">
 	<div class="container sidebar-img">
+	  <picture>
 	  <img id="flickr_roll" src="" alt="Loading..." loading=lazy onerror="load_img(this)"/>
+	  <a class="image_overlay_br" href="https://www.flickr.com/photos/202205040@N05/albums/72177720323695910">Flickr</a>
+	  </picture>
 	</div>
 
     <div class="container sidebar-sticky">
