Add about page and change title

--- a/site/_themes/hyde/css/_hyde.scss
+++ b/site/_themes/hyde/css/_hyde.scss
@@ -150,7 +150,8 @@ h3.my-pagination {
   color: #fff;
   margin-top: 0;
   font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-size: 2.5rem;
+  line-height: 1.2em;
 }
 
 
