--- a/site/_themes/hyde/css/_poole.scss
+++ b/site/_themes/hyde/css/_poole.scss
@@ -339,6 +339,12 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 4em;
 }
 
+.post:not(:last-of-type) {
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 2px solid #f5f5f5;
+}
+
 /* Blog post or page title */
 .page-title,
 .post-title,
