--- a/site/_themes/hyde/css/_styles.scss
+++ b/site/_themes/hyde/css/_styles.scss
@@ -85,3 +85,21 @@ img#flickr_roll {
   color: #FFF;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
+
+.iframe-container {
+  overflow: hidden;
+  /* Set the padding-top for the iframe based on contents
+  padding-top: 56.25%; // 16:9 --> 9/16 = 0.5625
+  padding-top: 72.95%; // 1024x747
+  */
+  position: relative;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
+}
